# thor

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum  status  uuid
com/tm/docker/: Dockerfile.airflow  Dockerfile.superset  Makefile  docker-compose.yml
com/tm/docker/clickhouse/: config.xml  users.xml
com/tm/docker/clickhouse/init/: 01_bronze.sql  02_silver.sql
com/tm/docker/dw/: Dockerfile.flink  docker-compose.yml
com/tm/docker/dw/flink/: kafka_to_iceberg.sql
com/tm/docker/dw/hadoop/: core-site.xml
com/tm/docker/dw/starrocks/init/: 00_iceberg_catalog.sql
com/tm/docker/hbase/: init.sh
com/tm/docker/postgres/init/: 01_create_databases.sh
com/tm/docker/realtime/: docker-compose.yml
com/tm/docker/starrocks/: init.sql
com/tm/docker/starrocks/init/: 01_silver_mirror.sql  02_gold.sql  03_segments.sql
com/tm/docker/superset/: superset_config.py
com/tm/docker/superset/init/: setup_dashboards.py
com/tm/docs/: README.md  architecture.md  data.md  setup.md
com/tm/docs/dw/: architecture.md  data.md  setup.md
com/tm/docs/realtime/: architecture.md  data.md  setup.md
com/tm/src/services/analytics-aggregator/: BUILD.bazel  Dockerfile.dbt
com/tm/src/services/analytics-aggregator/dags/: dropshipping_analytics_dag.py  medallion_pipeline_dag.py  silver_ingest_dag.py
com/tm/src/services/analytics-aggregator/dbt/: dbt_project.yml  packages.yml  profiles.yml
com/tm/src/services/analytics-aggregator/dbt/models/: sources.yml
com/tm/src/services/analytics-aggregator/dbt/models/marts/core/: fct_daily_metrics.sql
com/tm/src/services/analytics-aggregator/dbt/models/marts/marketing/: fct_marketing_attribution.sql
com/tm/src/services/analytics-aggregator/dbt/models/marts/product/: fct_product_performance.sql
com/tm/src/services/analytics-aggregator/dbt/models/staging/: stg_events.sql
com/tm/src/services/analytics-aggregator/dbt_clickhouse/: .user.yml  dbt_project.yml  profiles.yml
com/tm/src/services/analytics-aggregator/dbt_clickhouse/models/silver/: silver_events.sql
com/tm/src/services/analytics-aggregator/dbt_starrocks/: dbt_project.yml
com/tm/src/services/analytics-aggregator/dbt_starrocks/models/: sources.yml
com/tm/src/services/analytics-aggregator/dbt_starrocks/models/gold/: gold_revenue.sql
com/tm/src/services/analytics-aggregator/dw/dbt/: profiles.yml
com/tm/src/services/analytics-aggregator/realtime/dags/: __init__.py  medallion_pipeline_dag.py  silver_ingest_dag.py
com/tm/src/services/analytics-aggregator/realtime/dbt/: dbt_project.yml  profiles.yml
com/tm/src/services/analytics-aggregator/realtime/dbt/models/: sources.yml
com/tm/src/services/analytics-aggregator/realtime/dbt/models/silver/: silver_events.sql
com/tm/src/services/analytics-aggregator/scripts/: __init__.py  run_dag_locally.py  run_dbt.py
com/tm/src/services/analytics-aggregator/segment/: segment_engine.py
com/tm/src/services/analytics-aggregator/sync/: ch_to_starrocks.py
com/tm/src/services/analytics-aggregator/tests/: __init__.py  test_dag_validation.py
com/tm/src/services/event-producer/: BUILD.bazel  main.go
com/tm/src/services/tracking-ingestor/: BUILD.bazel  main.go
metadata/: default.sql  system  system.sql  tracking  tracking.sql  tracking_tracking.sql
tools/rules/: BUILD.bazel  com_tm_container.bzl
