module(
    name = "thor",
    version = "1.0.0",
)

# =============================================================================
# BAZEL DEPENDENCIES
# =============================================================================
# Đây là file cấu hình Bazel với bzlmod (Bazel 6+)
#
# LƯU Ý: Bazel 9.0.0 có nhiều breaking changes.
# Cần sử dụng phiên bản rules mới nhất.
#
# CÁCH CẬP NHẬT:
# 1. Thay đổi go.mod
# 2. Chạy: bazel run @gazelle//:gazelle
# =============================================================================

# =============================================================================
# GO RULES
# =============================================================================
bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "gazelle", version = "0.42.0")

# Go SDK
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.0")

# Go dependencies từ go.mod
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_ibm_sarama",
    "com_github_clickhouse_clickhouse_go_v2",
    "com_github_google_uuid",
)

# =============================================================================
# PYTHON RULES
# =============================================================================
# Dùng cho Airflow DAGs và dbt scripts
# =============================================================================
bazel_dep(name = "rules_python", version = "1.1.0")

# Python toolchain - sử dụng system Python
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
    is_default = True,
)
