module(
    name = "thor",
    version = "1.0.0",
)

# =============================================================================
# BAZEL DEPENDENCIES
# =============================================================================
# Đây là file cấu hình Bazel với bzlmod (Bazel 6+)
#
# LƯU Ý: Project này pin Bazel 8.0.0 qua .bazelversion (giống hulk).
# rules_oci + tar.bzl chưa tương thích với Bazel 9.
#
# CÁCH CẬP NHẬT:
# 1. Thay đổi go.mod
# 2. Chạy: bazel run @gazelle//:gazelle
# =============================================================================

# =============================================================================
# GO RULES
# =============================================================================
bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "gazelle", version = "0.42.0")

# Go SDK
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.0")

# Go dependencies từ go.mod
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_google_uuid",
    "com_github_ibm_sarama",
)

# =============================================================================
# OCI / CONTAINER RULES
# =============================================================================
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "tar.bzl", version = "0.3.0")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:611d30d7f6d9992c37b1e1a212eefdf1f7c671deb56db3707e24eb01da8c4c2a",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64", "distroless_base_linux_arm64_v8")

# =============================================================================
# PYTHON RULES
# =============================================================================
# Dùng cho Airflow DAGs và dbt scripts
# =============================================================================
bazel_dep(name = "rules_python", version = "1.5.4")

# Python toolchain - sử dụng system Python
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)
