# =============================================================================
# BUILD FILE - ANALYTICS AGGREGATOR (Medallion Pipeline)
# =============================================================================
# Targets:
#   bazel test :dag_validation_test   → validate DAG syntax
#   bazel run  :run_sync              → sync silver CH → StarRocks
# =============================================================================

load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

py_library(
    name = "dags_lib",
    srcs = glob(["dags/*.py"]),
    visibility = ["//visibility:public"],
)

py_library(
    name = "sync_lib",
    srcs = glob(["sync/*.py"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "dag_files",
    srcs = glob(["dags/*.py"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "dbt_clickhouse_files",
    srcs = glob(
        ["dbt_clickhouse/**/*.sql", "dbt_clickhouse/**/*.yml", "dbt_clickhouse/**/*.yaml"],
        allow_empty = True,
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "dbt_starrocks_files",
    srcs = glob(
        ["dbt_starrocks/**/*.sql", "dbt_starrocks/**/*.yml", "dbt_starrocks/**/*.yaml"],
        allow_empty = True,
    ),
    visibility = ["//visibility:public"],
)

py_test(
    name = "dag_validation_test",
    srcs = ["tests/test_dag_validation.py"],
    main = "tests/test_dag_validation.py",
    deps = [":dags_lib", ":sync_lib"],
    data = glob(["dags/*.py"]),
)

py_binary(
    name = "run_dag",
    srcs = ["scripts/run_dag_locally.py"],
    main = "scripts/run_dag_locally.py",
    deps = [":dags_lib", ":sync_lib"],
    data = [":dag_files", ":dbt_clickhouse_files", ":dbt_starrocks_files"],
)

py_binary(
    name = "run_sync",
    srcs = ["sync/ch_to_starrocks.py"],
    main = "sync/ch_to_starrocks.py",
    deps = [":sync_lib"],
)
