load("//tools/rules:com_tm_container.bzl", "com_tm_go_image")

com_tm_go_image(
    name = "event-producer",
    package_name = package_name(),
    srcs = ["main.go"],
    importpath = "thor/com/tm/src/services/event-producer",
    deps = [
        "@com_github_ibm_sarama//:sarama",
        "@com_github_google_uuid//:uuid",
    ],
)
